--- a/public/DASHBOARD.html
+++ b/public/DASHBOARD.html
@@ -449,8 +449,9 @@
     };
     
     const rateKey = rateKeys[CURRENT_COACH_ROLE];
-    if (rateKey && prod.hasOwnProperty(rateKey)) {
-      displayRate = prod[rateKey];
+    // CORRECTION: Access the 'rates' property on the product object
+    if (rateKey && prod.hasOwnProperty('rates') && prod.rates.hasOwnProperty(rateKey)) {
+      displayRate = prod.rates[rateKey];
     } else {
       console.error(`Rate key '${rateKey}' not found in product data or invalid coach role.`);
     }
