--- a/public/DASHBOARD.html
+++ b/public/DASHBOARD.html
@@ -91,21 +91,20 @@
         </select>
       </div>
 
-      <!-- Product -->
-      <div>
-        <label for="productIdSelect" class="form-label block mb-2">Product</label>
-        <select id="productIdSelect" class="form-input" required disabled>
-          <option value="" disabled selected>Select a Student ID first</option>
-        </select>
-        <div id="remainingCalls" class="mt-2 p-2 rounded-lg text-sm bg-gray-200 text-gray-700 hidden"></div>
-      </div>
-
-        <!-- Group students -->
-  <div id="groupStudentsContainer" class="hidden md:col-span-2">
-    <label class="form-label block mb-2">Select Students</label>
-    <div id="groupStudentsDynamic" class="space-y-2"></div>
-  </div>
-
+          <!-- Product -->
+    <div class="md:col-span-1">
+      <label for="productIdSelect" class="form-label block mb-2">Product</label>
+      <select id="productIdSelect" class="form-input" required disabled>
+        <option value="" disabled selected>Select a Student ID first</option>
+      </select>
+      <div id="remainingCalls" class="mt-2 p-2 rounded-lg text-sm bg-gray-200 text-gray-700 hidden"></div>
+    </div>
+    
+    <!-- Group students -->
+    <div id="groupStudentsContainer" class="hidden md:col-span-1">
+      <label class="form-label block mb-2">Select Students</label>
+      <div id="groupStudentsDynamic" class="space-y-2"></div>
+    </div>
 
       <!-- Date -->
       <div>
